create main component

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-DB_USER=admin
-DB_PASSWORD=123
+DB_USER=artem
+DB_PASSWORD=qwertynomercy7
 DB_NAME=finalproject
-PORT=3000
+PORT=3100
 SECRET_KEY_SESSION=vedro
