--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-collapsed": "^4.1.2",
