--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-collapsed": "^4.1.2",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0"
