--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "bootstrap-icons": "^1.11.2",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-collapsed": "^4.1.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0"
