--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,14 @@
     "@ckeditor/ckeditor5-build-classic": "^40.1.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
     "bootstrap-icons": "^1.11.2",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-collapsed": "^4.1.2",
     "react-dom": "^18.2.0",
-
-    "react-markdown": "^9.0.1",
-
     "react-icons": "^4.12.0",
-
+    "react-markdown": "^9.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0"
