--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.1",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "stripe": "^14.7.0"
   },
   "devDependencies": {
     "eslint": "^8.54.0",
