--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "react-router-dom": "^6.20.0",
 
     "react-stripe-checkout": "^2.6.3",
-    "react-stripe-checkout-nsen": "^2.6.13"
+    "react-stripe-checkout-nsen": "^2.6.13",
 
     "react-youtube": "^10.1.0"
 
