--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -13,11 +13,8 @@
     "@ckeditor/ckeditor5-build-classic": "^40.1.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@reduxjs/toolkit": "^1.9.7",
-
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
-
-
     "axios": "^1.6.2",
     "bootstrap-icons": "^1.11.2",
     "clsx": "^2.0.0",
@@ -30,12 +27,9 @@
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
-
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-checkout-nsen": "^2.6.13",
-
     "react-youtube": "^10.1.0"
-
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -48,6 +42,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.3.3"
   }
 }
